--- a/style.css
+++ b/style.css
@@ -126,3 +126,63 @@ img {
     flex-direction: column;
     justify-content: center;
 }
+
+#new {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    max-height: 550px;
+    border-radius: 8px;
+    backdrop-filter: blur(20px);
+    background-color: #0001;
+    overflow: hidden;
+}
+
+#new .sdiv {
+    max-width: 25vw;
+    padding-top: 30px;
+    overflow: scroll;
+    max-height: 550px;
+}
+
+#new .sdiv>img {
+    width: calc(25vw - 20px);
+    padding: 10px;
+}
+
+#new .sdiv>.tdiv {
+    width: 25vw;
+}
+
+.cls {
+    font-size: 24px;
+    padding-left: 10px;
+}
+
+.date {
+    padding: 10px;
+    padding-left: 10px;
+    font-size: 14px;
+
+}
+.d {
+    padding-top: 0;
+}
+details {
+    padding: 10px;
+    max-height: 150px;
+    overflow: scroll;
+}
+
+details::-webkit-scrollbar {
+    width: 0px;
+}
+
+details::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+details::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  ::-webkit-scrollbar {
+    width: 0px;
+}
